<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundobola2"
    tools:context=".adivinha">

    <ImageView
        android:id="@+id/idmaozinhas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/realoufeiki" />

    <ImageView
        android:id="@+id/ideusouvcpronto"
        android:layout_width="576dp"
        android:layout_height="918dp"
        android:layout_marginBottom="196dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/eusoupronto" />

    <ImageView
        android:id="@+id/idmuitobomtupoggers"
        android:layout_width="576dp"
        android:layout_height="918dp"
        android:layout_marginBottom="192dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bomtupoggers" />

    <ImageView
        android:id="@+id/idvoceaqui"
        android:layout_width="576dp"
        android:layout_height="918dp"
        android:layout_marginBottom="192dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/voceaqui" />

    <ImageView
        android:id="@+id/idsai"
        android:layout_width="576dp"
        android:layout_height="918dp"
        android:layout_marginBottom="192dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/naoprontosai" />

    <WebView
        android:id="@+id/idgpsbrabo"
        android:layout_width="407dp"
        android:layout_height="372dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/idbotaovvoltar"
        android:layout_width="378dp"
        android:layout_height="53dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/voltartext0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/idbotaosim"
        android:layout_width="167dp"
        android:layout_height="92dp"
        android:text="@string/sim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <Button
        android:id="@+id/idbotaonao"
        android:layout_width="167dp"
        android:layout_height="92dp"
        android:text="@string/nao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

</androidx.constraintlayout.widget.ConstraintLayout>